--- a/cargo.toml
+++ b/cargo.toml
@@ -1,8 +1,4 @@
 [workspace]
 resolver = "2"
 edition = "2021"
-members = [
-    "app",
-    "plugins/*",
-    # "crates/*"
-]
+members = ["app", "plugins/*"]
