--- a/plugins/ribasome_ui_plugin/Cargo.toml
+++ b/plugins/ribasome_ui_plugin/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "ribasome_ui"
+name = "ribasome_ui_plugin"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = "0.11"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 strum = { version = "0.24", features = ["derive"] }
