sandboxing ui stategies

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
-name = "ribasome_app"
+name = "ribasome_frontend"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+name = "ribasome_frontend"
+path = "src/lib.rs"
+
+[[bin]]
+name = "ribasome_frontend_app"
+path = "src/main.rs"
 
 [dependencies]
 bevy = { version = "0.11", features = ["jpeg"] }
@@ -12,13 +20,13 @@ bevy_eventlistener = { git = "https://github.com/aevyrie/bevy_eventlistener.git"
 bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", rev = "deab993339801252936218ca0169fac63b42bb9d" }
 bevy_asset_loader = "0.17.0"
 bevy_egui = "0.21"
+bevy-inspector-egui = "0.19.0"
+egui_dock = "0.6.3"
 
 #internal
 bevy_drag = { path = "../plugins/bevy_drag" }
 bevy_cameras = { path = "../plugins/bevy_cameras" }
-
 ribasome_models = { git = "https://github.com/hector-crean/ribasome_models", branch = "main" }
-
 
 #errors
 thiserror = "1.0.38"
