--- a/plugins/ribasome_ui_plugin/Cargo.toml
+++ b/plugins/ribasome_ui_plugin/Cargo.toml
@@ -12,5 +12,5 @@ serde_json = "1"
 strum = { version = "0.24", features = ["derive"] }
 strum_macros = "0.24"
 sublime_fuzzy = "0.7"
-egui = "0.22.0"
+bevy_egui = "0.21"
 egui_extras = "0.22.0"
