--- a/plugins/bevy_cameras/Cargo.toml
+++ b/plugins/bevy_cameras/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.11"
+bevy_mod_picking = { git = "https://github.com/bardt/bevy_mod_picking", branch = "bevy_0.11" }
