--- a/crates/ribasome_state/Cargo.toml
+++ b/crates/ribasome_state/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bevy_editor"
+name = "ribasome_state"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,10 +7,5 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.11"
-bevy_egui = "0.21.0"
-bevy-inspector-egui = "0.19.0"
-egui_dock = "0.6"
-egui-gizmo = "0.11.0"
-
-ribasome_state = { path = "../../crates/ribasome_state"}
-
+bevy_cameras = { path = "../../plugins/bevy_cameras"}
+ribasome_models = { git = "https://github.com/hector-crean/ribasome_models", branch = "main" }
