--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -15,8 +15,8 @@ path = "src/main.rs"
 
 [dependencies]
 bevy = { version = "0.11", features = ["jpeg"] }
-bevy_mod_picking = { git = "https://github.com/bardt/bevy_mod_picking", branch = "bevy_0.11" }
-bevy_eventlistener = { git = "https://github.com/aevyrie/bevy_eventlistener.git", rev = "4d8de4c" }
+bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking"}
+
 bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", rev = "deab993339801252936218ca0169fac63b42bb9d" }
 bevy_asset_loader = "0.17.0"
 bevy_egui = "0.21"
