--- a/plugins/bevy_drag/Cargo.toml
+++ b/plugins/bevy_drag/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies]
 bevy = "0.11"
 bevy_cameras = { path = "../bevy_cameras" }
-bevy_mod_picking = { git = "https://github.com/bardt/bevy_mod_picking", branch = "bevy_0.11" }
-bevy_eventlistener = { git = "https://github.com/aevyrie/bevy_eventlistener.git", rev = "4d8de4c" }
-bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "main" }
+bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking"}
+bevy_mod_raycast = "0.11.0"
+
+
 bevy_egui = "0.21.0"
 
 
