--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -33,6 +33,7 @@ bevy_cameras = { path = "../plugins/bevy_cameras" }
 ribasome_models = { git = "https://github.com/hector-crean/ribasome_models", branch = "main" }
 bevy_cmd_palette_plugin = { path = "../plugins/bevy_cmd_palette_plugin" }
 bevy_add_tool = { path = "../plugins/bevy_add_tool" }
+bevy_rich_text_editor = { path = "../plugins/bevy_rich_text_editor" }
 
 #errors
 thiserror = "1.0.38"
