--- a/plugins/bevy_add_tool/Cargo.toml
+++ b/plugins/bevy_add_tool/Cargo.toml
@@ -10,3 +10,5 @@ bevy = "0.11"
 bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" }
 bevy_mod_reqwest = "0.11.1"
 reqwest = "0.11.18"
+
+bevy_ui_widgets = { path = "../bevy_ui_widgets"}
