--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -15,7 +15,9 @@ path = "src/main.rs"
 
 [dependencies]
 bevy = { version = "0.11", features = ["jpeg"] }
-bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" }
+bevy_mod_picking = { version="0.15",  features=[
+    "backend_raycast", "backend_bevy_ui", "backend_egui", "backend_sprite", "debug", "selection", "highlight"
+] }
 
 bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", rev = "deab993339801252936218ca0169fac63b42bb9d" }
 bevy_asset_loader = "0.17.0"
@@ -24,6 +26,8 @@ bevy-inspector-egui = "0.19.0"
 egui_dock = "0.6.3"
 bevy_mod_outline = "0.5"
 bevy_mod_reqwest = "0.11.1"
+egui-gizmo = "0.11.0"
+
 
 #internal
 ribasome_state = { path = "../crates/ribasome_state" }
