--- a/plugins/bevy_mesh_painter/Cargo.toml
+++ b/plugins/bevy_mesh_painter/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 bitflags = "2.4.0"
 bevy_rapier3d = "0.22.0"
 bevy = { version = "0.11", features = ["jpeg"] }
-bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking"}
+bevy_mod_picking = { version="0.15",  features=["all"] }
 
 
 
