--- a/plugins/bevy_rich_text_editor/Cargo.toml
+++ b/plugins/bevy_rich_text_editor/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 [dependencies]
 bevy = "0.11"
 serde = { version = "1", features = ["derive"] }
+chrono = { versuon = "0.4.26", features = ["serde"] }
+
 serde_json = "1"
 strum = { version = "0.24", features = ["derive"] }
 strum_macros = "0.24"
 bevy_egui = "0.21"
-rich_text = { path = "../../crates/rich_text" }
+peritext = { path = "../../crates/peritext" }
+thiserror = "1.0.47"
